--- a/app/assets/stylesheets/modules/_notice.scss
+++ b/app/assets/stylesheets/modules/_notice.scss
@@ -1,17 +1,17 @@
 .notice {
   clear: both;
   @include responsive-bottom-margin;
-  padding: $gutter-half;
+  padding: govuk-spacing(3);
 
-  border: 5px solid $govuk-blue;
+  border: 5px solid $govuk-brand-colour;
 
   @include media(tablet) {
-    padding: $gutter-two-thirds;
+    padding: govuk-spacing(4);
   }
 
   &__title {
     @include bold-36;
-    margin-bottom: $gutter-one-third;
+    margin-bottom: govuk-spacing(2);
   }
 
   &__description {
