--- a/app/assets/stylesheets/modules/_related-content.scss
+++ b/app/assets/stylesheets/modules/_related-content.scss
@@ -1,6 +1,6 @@
 .related {
   @include media(tablet) {
-    border-top: 1px solid $border-colour;
+    border-top: 1px solid $govuk-border-colour;
   }
 }
 
